2011-02-09  Philipp Kern  <phil@0x539.de>

	* po/da.po: Added Danish translation by Joe Dalton.
	Debian bug #605322.

	* po/LINGUAS: Added da.

2009-10-12  Armin Burgmeier  <armin@0x539.de>

	* po/uk.po: Added Ukrainian translation by Yuri Chornoivan. Bug #479.

	* po/LINGUAS: Added uk.

2009-01-01  Philipp Kern  <phil@0x539.de>

	* po/ca.po:
	* po/de.po:
	* po/es.po:
	* po/it.po:
	* po/nl.po:
	* po/oc.po:
	* po/sv.po: imported from Launchpad

2009-01-01  Philipp Kern  <phil@0x539.de>

	* configure.ac:
	* NEWS: bump version to 0.4.7, document the changes

2009-01-01  Philipp Kern  <phil@0x539.de>

	* po/oc.po: adjusted report-msgid-bugs-to

2008-12-04  Armin Burgmeier  <armin@0x539.de>

	* contrib/obby_web/obby.php: Use UTF-8 charset for htmlentities(), so
	that non-ASCII-characters are correctly shown (Bug #405).

2008-11-27  Philipp Kern  <phil@0x539.de>

	* po/fr.po: reviewed and completed French translation, thanks to
	Christian Perrier

2008-10-06  Philipp Kern  <phil@0x539.de>

	* po/fr.po: fixed typo in French translation (thanks to Lionel
	Porcheron)

2008-09-09  Philipp Kern  <phil@0x539.de>

	* configure.ac:
	* NEWS: bump version to 0.4.6, document the changes

2008-09-09  Philipp Kern  <phil@0x539.de>

	* po/LINGUAS:
	* po/oc.po: add new Occitan (post 1500) translation

2008-09-09  Philipp Kern  <phil@0x539.de>

	* src/Makefile.am, src/serialise/Makefile.am, test/Makefile.am: clean
	up include handling; first step to support distcheck

2008-09-08  Armin Burgmeier  <armin@0x539.de>

	* inc/client_buffer.hpp: Added a connect(const net6::address&)
	overload.

2008-09-08  Armin Burgmeier  <armin@0x539.de>

	* src/zeroconf_avahi.cpp: Set scope ID of discovered IPv6 services,
	for link-local IPv6 to work.

2008-06-22  Armin Burgmeier  <armin@0x539.de>

	* src/zeroconf_howl.cpp: Don't throw exceptions in C callbacks.
	Instead, print the error to std::cerr as the avahi implementation
	does.

2007-12-27  Philipp Kern <phil@0x539.de>
